Added initial feature model

--- a/FeatureModel/runtime.properties
+++ b/FeatureModel/runtime.properties
@@ -1,1 +1,20 @@
-Base=false
+MissionEditor=true
+MissionCreation=true
+MissionEditing=true
+RobotView=true
+ErrorReporting=true
+RobotHandler=true
+SensorProcessor=true
+RangeSensor=false
+PositionSensor=false
+TireSensor=false
+PathFinder=true
+Dijkstra=false
+A_Star=false
+NetworkHandler=false
+RobotController=true
+RewardCalculator=true
+Timer=true
+Environment=true
+ROVUView=true
+EmergencyStop=true
