Updated Feature Model

--- a/FeatureModel/runtime.properties
+++ b/FeatureModel/runtime.properties
@@ -18,3 +18,9 @@ Timer=true
 Environment=true
 ROVUView=true
 EmergencyStop=true
+Screen=false
+Speaker=false
+Wheels=false
+Tracks=false
+Propeller=false
+PickUpArms=false
